Work on Chapter 4

--- a/references.bib
+++ b/references.bib
@@ -580,3 +580,43 @@ URL= {https://www.r-inla.org/faq},
   howpublished={\url{https://www.unaids.org/en/resources/documents/2021/global-aids-update}},
   note={Accessed: June 2023}
 }
+
+@Manual{multiutils,
+  title = {multi.utils: Utility functions for multi-agyw},
+  author = {Adam Howes},
+  year = {2022},
+  note = {R package version 0.1.0},
+}
+
+@article{sorbye2014scaling,
+  title={{Scaling intrinsic Gaussian Markov random field priors in spatial modelling}},
+  author={S{\o}rbye, Sigrunn Holbek and Rue, H{\aa}vard},
+  journal={Spatial Statistics},
+  volume={8},
+  pages={39--51},
+  year={2014},
+  publisher={Elsevier}
+}
+
+
+@article{freni2018note,
+  title={A note on intrinsic conditional autoregressive models for disconnected graphs},
+  author={Freni-Sterrantino, Anna and Ventrucci, Massimo and Rue, H{\aa}vard},
+  journal={Spatial and spatio-temporal epidemiology},
+  volume={26},
+  pages={25--34},
+  year={2018},
+  publisher={Elsevier}
+}
+
+
+@article{sorbye2017penalised,
+  title={Penalised complexity priors for stationary autoregressive processes},
+  author={S{\o}rbye, Sigrunn Holbek and Rue, H{\aa}vard},
+  journal={Journal of Time Series Analysis},
+  volume={38},
+  number={6},
+  pages={923--935},
+  year={2017},
+  publisher={Wiley Online Library}
+}
