--- a/04-multi-agyw.Rmd
+++ b/04-multi-agyw.Rmd
@@ -21,8 +21,8 @@ In this chapter I describe an application of Bayesian spatio-temporal statistics
 This work was done in collaboration with colleagues from the MRC Centre for Global Infectious Disease Analysis and UNAIDS.
 My primary role was to develop the statistical model, building upon an earlier version of the analysis conducted by Kathryn Risher.
 The results are described in @howes2023spatio.
-Kathryn has created a spreadsheet tool which is beginning to be used by countries to guide policy.
-Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw) and supported by the R package [`multi.utils`](https://athowes.github.io/multi.utils).
+Further, Kathryn has created a spreadsheet tool based on the estimates which is beginning to be used by countries to guide policy.
+Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw) and supported by the R package [`multi.utils`](https://athowes.github.io/multi.utils) [@multiutils].
 
 ## Background
 
@@ -31,29 +31,29 @@ Moreover, variation in risk is systematic across demographic characteristics.
 Adolescent girls and young women (AGYW) -- that is, females aged 15-29 -- are one such demographic group at particular risk.
 
 The Global AIDS Strategy 2021-2026 proposed stratifying HIV prevention packages to AGYW based on local population-level HIV incidence and individual-level sexual risk behaviour.
-The idea is that prioritisation based on both of these factors is more efficient than on only or one the other.
+The idea is that risk depends on both factors, and therefore prioritisation is more efficient if both are taken into account (Figure \@ref(fig:risk-grid)).
+Implementing the strategy is easier when estimates of the size of each population are available.
 
 ```{r risk-grid, fig.cap="Risk grid."}
 knitr::include_graphics("figures/extra/risk-grid.png")
 ```
 
-Implementing the strategy requires estimates.
-
 ## Data
 
-I used household survey data.
+I used household survey data from 13 countries: Botswana, Cameroon, Kenya, Lesotho, Malawi, Mozambique, Namibia, South Africa, Eswatini, Tanzania, Uganda, Zambia and Zimbabwe.
+These countries have been designated AGYW priority countries.
+I found that it was not appropriate to use the surveys without a specific transactional sex question on an equal footing to the other surveys.
 
 ## Model for risk group proportions
 
-I found that it was not appropriate to use the surveys without a specific transactional sex question on an equal footing to the other surveys.
-For this reason, I took a two-stage modelling approach to estimate the four risk group proportions.
-In particular, index the four risk groups as $k \in \{1, 2, 3, 4\}$, and denote being in either the third or fourth risk group by $k = 3^{+}$.
-First, using all the surveys, I used a multinomial logistic regression model to model the proportion of AGYW in the risk groups $k \in \{1, 2, 3^{+}\}$.
-Then, using only those surveys with a specific transactional sex question, I fit a logistic regression model to estimate the proportion of those in the $k = 3^{+}$ risk group that were in the $k = 3$ and $k = 4$ risk groups respectively.
+I took a two-stage modelling approach to estimate the four risk group proportions.
+Index the four risk groups as $k \in \{1, 2, 3, 4\}$, and denote being in either the third or fourth risk group by $k = 3^{+}$.
+First, using all the surveys, I used a spatio-temporal multinomial logistic regression model to model the proportion of AGYW in the risk groups $k \in \{1, 2, 3^{+}\}$.
+Then, using only those surveys with a specific transactional sex question, I fit a spatial logistic regression model to estimate the proportion of those in the $k = 3^{+}$ risk group that were in the $k = 3$ and $k = 4$ risk groups respectively.
 
 ### Spatio-temporal multinomial logistic regression
 
-Let $i \in \{1, \ldots, n\}$ denote districts which partition the 13 studied AGYW priority countries $c[i] \in \{1, \ldots, 13\}$.
+Let $i \in \{1, \ldots, n\}$ denote districts partitioning the 13 studied AGYW priority countries $c[i] \in \{1, \ldots, 13\}$.
 Consider the years 1999-2018 denoted as $t \in \{1, \ldots, T\}$, and age groups $a \in \{\text{15--19}, \text{20--24}, \text{25--29}\}$.
 Let $p_{itak} > 0$ with $\sum_{k = 1}^{3^{+}} p_{itak} = 1$, be the probability of membership of risk group $k$ for an individual in district $i$, at time $t$, in age group $a$.
 
@@ -62,102 +62,107 @@ Let $p_{itak} > 0$ with $\sum_{k = 1}^{3^{+}} p_{itak} = 1$, be the probability 
 A baseline category multinomial logistic regression model is specified by
 \begin{align}
     \y_{ita} &= (y_{ita1}, \ldots, y_{ita3^{+}})^\top \sim \text{Multinomial}(m_{ita}; \, p_{ita1}, \ldots, p_{ita3^{+}}), \\
-    \log(p_{itak} / p_{ita1}) &= \eta_k, k = 2, 3^{+},
+    \log \left( \frac{p_{itak}}{p_{ita1}} \right) &= \eta_{itak}, \quad k = 2, 3^{+},
 \end{align}
-where the number in risk group $k$ is $y_{itak}$, the sample size is $m_{ita} = \sum_{k = 1}^{3^{+}} y_{itak}$, $p_{itak} > 0$ is the probability of membership of the $k$th risk group, and $k = 1$ is the baseline category.
+where the number in risk group $k$ is $y_{itak}$, the sample size is $m_{ita} = \sum_{k = 1}^{3^{+}} y_{itak}$, and $k = 1$ is the baseline category.
+This model is not an LGM, and it is not possible to fit in `R-INLA`.
 
 #### The multinomial-Poisson transformation
 
-The multinomial-Poisson transformation reframes a given multinomial logisitic regression model as an equivalent Poisson log-linear model of the form
+We use the multinomial-Poisson transformation to enable inference with `R-INLA`.
+The transformation reframes a given multinomial logisitic regression model as an equivalent Poisson log-linear model of the form
 \begin{align}
-    y_{itak} &\sim \text{Poisson}(\kappa_{itak}), \label{eq:poisson} \\
-    \log(\kappa_{itak}) &= \eta_{itak},
+    y_{itak} &\sim \text{Poisson}(\kappa_{itak}), \label{eq:poisson1} \\
+    \log(\kappa_{itak}) &= \eta_{itak}. \label{eq:poisson2}
 \end{align}
-for certain choice of the linear predictor $\eta_{itak}$.
 The basis of the transformation is that, conditional on their sum, Poisson counts are jointly multinomially distributed [@mccullagh1989generalized] as follows
 \begin{equation}
     \mathbf{y}_{ita} \, | \, m_{ita} \sim \text{Multinomial} \left( m_{ita}; \frac{\kappa_{ita1}}{\kappa_{ita}}, \ldots, \frac{\kappa_{ita3^{+}}}{\kappa_{ita}} \right),
 \end{equation}
-where $\kappa_{ita} = \sum_{k = 1}^{3^{+}} \kappa_{itak}$ such that category probabilities are obtained by the softmax function
+where $\kappa_{ita} = \sum_{k = 1}^{3^{+}} \kappa_{itak}$.
+Category probabilities are then obtained by the softmax function
 \begin{equation}
     p_{itak} = \frac{\exp(\eta_{itak})}{\sum_{k = 1}^{3^{+}} \exp(\eta_{itak})} = \frac{\kappa_{itak}}{\sum_{k = 1}^{3^{+}} \kappa_{itak}} = \frac{\kappa_{itak}}{\kappa_{ita}}.
 \end{equation}
-In the equivalent model, the sample sizes $m_{ita} = \sum_k y_{itak}$ are treated as random, rather than fixed as they would be in the multinomial logistic regression model, taking a Poisson distribution
+In the equivalent model, the sample sizes $m_{ita} = \sum_k y_{itak}$ are treated as random rather than fixed, and take a Poisson distribution
 \begin{equation}
     m_{ita} \sim \text{Poisson} \left( \kappa_{ita} \right).
 \end{equation}
-In the equivalent model, the joint distribution of $p(\mathbf{y}_{ita}, m_{ita}) = p(\mathbf{y}_{ita} \, | \, m_{ita})p(m_{ita})$ is
+The joint distribution of $p(\mathbf{y}_{ita}, m_{ita}) = p(\mathbf{y}_{ita} \, | \, m_{ita})p(m_{ita})$ is then
 \begin{align}
 p(\mathbf{y}_{ita}, m_{ita}) &= \exp(-\kappa_{ita}) \frac{(\kappa_{ita})^{m_{ita}}}{m_{ita}!} \times \frac{m_{ita}!}{\prod_k y_{itak}!} \prod_k \left( \frac{\kappa_{itak}}{\kappa_{ita}} \right)^{y_{itak}} \\
 &= \prod_k \left( \frac{\exp(-\kappa_{itak}) \left( \kappa_{itak} \right)^{y_{itak}}}{y_{itak}!} \right) \\
 &= \prod_k \text{Poisson} \left( y_{itak} \, | \, \kappa_{itak} \right). \label{eq:prodpoisson}
 \end{align}
-corresponding to the product of independent Poisson likelihoods as in Equation \ref{eq:poisson}.
-This model, including random sample sizes, is equivalent to the multinomial logistic regression only when these normalisation constants are recovered exactly.
+corresponding to the product of independent Poisson likelihoods as in Equation \ref{eq:poisson1}.
+This model, including random sample sizes, is equivalent to the multinomial logistic regression only when the normalisation constants $m_{ita}$ are recovered exactly.
 To ensure that this is the case, one approach is to include observation-specific random effects $\theta_{ita}$ in the equation for the linear predictor.
 Multiplying each of $\{\kappa_{itak}\}_{k = 1}^{3^+}$ by $\exp(\theta_{ita})$ has no effect on the category probabilities, but does provide the necessary flexibility for $\kappa_{ita}$ to recover $m_{ita}$ exactly.
 Although in theory an improper prior $\theta_{ita} \propto 1$ should be used, in practise, by keeping $\eta_{ita}$ otherwise small using appropriate constraints, so that arbitrarily large values of $\theta_{ita}$ are not required, it is sufficient (and practically preferable for inference) to instead use a vague prior.
 
 #### Model specifications
 
-I considered four models for $\eta_{ita}$ of the form
-$$
+I considered four models for $\eta_{ita}$ in Equation \ref{eq:poisson2} of the form
+\begin{equation}
 \eta_{ita} = \theta_{ita} + \beta_k + \zeta_{c[i]k} + \alpha_{ac[i]k} + \phi_{ik} + \gamma_{tk}.
-$$
+\end{equation}
 <!-- + \delta_{itk} -->
-Observation random effects $\theta_{ita} \sim \mathcal{N}(0, 1000^2)$ were included in all models we considered.
-To capture country-specific proportion estimates for each category, we included category random effects $\beta_k \sim \mathcal{N}(0, \tau_\beta^{-1})$ and country-category random effects $\zeta_{ck} \sim \mathcal{N}(0, \tau_\zeta^{-1})$.
+Observation random effects $\theta_{ita} \sim \mathcal{N}(0, 1000^2)$ were included in all models I considered, and are required for the multinomial-Poisson transformation to be valid.
+To capture country-specific proportion estimates for each category, I included category random effects $\beta_k \sim \mathcal{N}(0, \tau_\beta^{-1})$ and country-category random effects $\zeta_{ck} \sim \mathcal{N}(0, \tau_\zeta^{-1})$.
 Heterogeneity in risk group proportions by age was allowed by including age-country-category random effects $\alpha_{ack} \sim \mathcal{N}(0, \tau_\alpha^{-1})$.
-I considered two specifications, independent and identically distributed (IID) and Besag [@besag1991bayesian], for the space-category $\phi_{ik}$ random effects (Section \ref{sec:spatial-random-effects}) and two specifications, IID and first order autoregressive (AR1), for the year-category $\gamma_{tk}$ random effects (Section \ref{sec:temporal-random-effects}).
-All random effect precision parameters $\tau \in \{\tau_\beta, \tau_\zeta, \tau_\alpha, \tau_\phi, \tau_\gamma\}$ were given independent penalised complexity (PC) priors [@simpson2017penalising] with base model $\sigma = 0$ given by $p(\tau) = 0.5 \nu \tau^{-3/2} \exp \left( - \nu \tau^{-1/2} \right)$ where $\nu = - \ln(0.01) / 2.5$ such that  $\mathbb{P}(\sigma > 2.5) = 0.01$.
 
-#### Spatial random effects
+##### Spatial random effects
 
-The specifications we considered were IID
+For the space-category $\phi_{ik}$ random effects I considered two specifications:
+
+1. Independent and identically distributed (IID) $\phi_{ik} \sim \mathcal{N}(0, \tau_\phi^{-1})$,
+2. Besag [@besag1991bayesian] grouped by category
 $$
-\phi_{ik} \sim \mathcal{N}(0, \tau_\phi^{-1}),
+\bphi = (\phi_{11}, \ldots, \phi_{n1}, \ldots, \phi_{1{3^{+}}}, \ldots \phi_{n3^{+}})^\top \sim \mathcal{N}(\mathbf{0}, (\tau_\phi \mathbf{R}^\star_\phi)^{-}).
 $$
-and Besag grouped by category
-$$
-\bphi = (\phi_{11}, \ldots, \phi_{n1}, \ldots, \phi_{1{3^{+}}}, \ldots \phi_{n3^{+}})^\top \sim \mathcal{N}(\mathbf{0}, (\tau_\phi \mathbf{R}^\star_\phi)^{-}),
-$$
-where the scaled structure matrix $\mathbf{R}^\star_\phi = \mathbf{R}^\star_b \otimes \mathbf{I}$ is given by the Kronecker product of the scaled Besag structure matrix $\mathbf{R}^\star_b$ and the identity matrix $\mathbf{I}$, and ${-}$ denotes the generalised matrix inverse.
+
+The scaled structure matrix $\mathbf{R}^\star_\phi = \mathbf{R}^\star_b \otimes \mathbf{I}$ is given by the Kronecker product of the scaled Besag structure matrix $\mathbf{R}^\star_b$ and the identity matrix $\mathbf{I}$, and ${-}$ denotes the generalised matrix inverse.
 Scaling of the structure matrix to have generalised variance one ensures interpretable priors may be placed on the precision parameter [@sorbye2014scaling].
-We followed the further recommendations of @freni2018note with regard to disconnected adjacency graphs, singletons and constraints.
-The Besag structure matrix $\mathbf{R}_b$ is obtained by the precision matrix of the random effects $\mathbf{b} = (b_1, \ldots, b_n)^\top$ with full conditionals
+I followed the further recommendations of @freni2018note with regard to disconnected adjacency graphs, singletons and constraints.
+The Besag structure matrix $\mathbf{R}_b$ was obtained by the precision matrix of the random effects $\mathbf{b} = (b_1, \ldots, b_n)^\top$ with full conditionals
 \begin{equation}
 b_i \, | \, \mathbf{b}_{-i} \sim \N\left(\frac{\sum_{j: j \sim i} b_j}{n_{\delta i}}, \frac{1}{n_{\delta i}}\right),
 \end{equation}
 where $j \sim i$ if the districts $A_i$ and $A_j$ are adjacent, and $n_{\delta i}$ is the number of districts adjacent to $A_i$.
 
-In preliminary testing, we excluded spatial random effects from the model, but found that this negatively effected performance.
-We also tested using the BYM2 model [@simpson2017penalising] in place of the Besag, but found that the proportion parameter posteriors tended to be highly peaked at the value one.
-For simplicity and to avoid numerical issues, by using Besag random effects we decided to fix this proportion to one.
+In preliminary testing, I excluded spatial random effects from the model, but found that this negatively effected performance.
+I also tested using the BYM2 model [@simpson2017penalising] in place of the Besag, but found that the proportion parameter posteriors tended to be highly peaked at the value one.
+For simplicity and to avoid numerical issues, by using Besag random effects I decided to fix this proportion to one.
 
-#### Temporal random effects
+##### Temporal random effects
 
-The specifications we considered were IID
+For the year-category $\gamma_{tk}$ random effects I considered two specifications:
+
+1. IID $\phi_{tk} \sim \mathcal{N}(0, \tau_\phi^{-1})$,
+2. First order autoregressive (AR1) grouped by category
 $$
-\phi_{tk} \sim \mathcal{N}(0, \tau_\phi^{-1}),
+\bm{\gamma} = (\gamma_{11}, \ldots, \gamma_{13^{+}}, \ldots, \gamma_{T1}, \ldots, \gamma_{T3^{+}})^\top \sim \mathcal{N}(\mathbf{0}, (\tau_\phi \mathbf{R}^\star_\gamma)^{-}).
 $$
-and AR1 grouped by category
-$$
-\bm{\gamma} = (\gamma_{11}, \ldots, \gamma_{13^{+}}, \ldots, \gamma_{T1}, \ldots, \gamma_{T3^{+}})^\top \sim \mathcal{N}(\mathbf{0}, (\tau_\phi \mathbf{R}^\star_\gamma)^{-}),
-$$
-where the scaled structure matrix $\mathbf{R}^\star_\gamma = \mathbf{R}^\star_r \otimes \mathbf{I}$ is given by the Kronecker product of a scaled AR1 structure matrix $\mathbf{R}^\star_r$ and the identity matrix $\mathbf{I}$.
+
+The scaled structure matrix $\mathbf{R}^\star_\gamma = \mathbf{R}^\star_r \otimes \mathbf{I}$ is given by the Kronecker product of a scaled AR1 structure matrix $\mathbf{R}^\star_r$ and the identity matrix $\mathbf{I}$.
 The AR1 structure matrix $\mathbf{R}_r$ is obtained by precision matrix of the random effects $\mathbf{r} = (r_1, \ldots, r_T)^\top$ specified by
 \begin{align}
 r_1 &\sim \left( 0, \frac{1}{1 - \rho^2} \right), \\
 r_t &= \rho r_{t - 1} + \epsilon_t, \quad t = 2, \ldots, T, 
 \end{align}
 where $\epsilon_t \sim \mathcal{N}(0, 1)$ and $|\rho| < 1$.
-For the lag-one correlation parameter $\rho$, we used the PC prior, as derived by @sorbye2017penalised, with base model $\rho = 1$ and condition $\mathbb{P}(\rho > 0 = 0.75)$.
-We chose the base model $\rho = 1$ corresponding to no change in behaviour over time, rather than the alternative $\rho = 0$ corresponding to no correlation in behaviour over time, as we judged the former to be more plausible a priori.
+
+##### Priors
+
+All random effect precision parameters $\tau \in \{\tau_\beta, \tau_\zeta, \tau_\alpha, \tau_\phi, \tau_\gamma\}$ were given independent penalised complexity (PC) priors [@simpson2017penalising] with base model $\sigma = 0$ given by $p(\tau) = 0.5 \nu \tau^{-3/2} \exp \left( - \nu \tau^{-1/2} \right)$ where $\nu = - \ln(0.01) / 2.5$ such that  $\mathbb{P}(\sigma > 2.5) = 0.01$.
+
+For the lag-one correlation parameter $\rho$, I used the PC prior, as derived by @sorbye2017penalised, with base model $\rho = 1$ and condition $\mathbb{P}(\rho > 0 = 0.75)$.
+I chose the base model $\rho = 1$ corresponding to no change in behaviour over time, rather than the alternative $\rho = 0$ corresponding to no correlation in behaviour over time, as I judged the former to be more plausible a priori.
 
 #### Constraints
 
-To ensure interpretable posterior inferences of random effect contribution, we applied sum-to-zero constraints such that none of the category interaction random effects altered overall category probabilities.
-For the space-year-category random effects, we applied analogous sum-to-zero constraints to maintain roles of the space-category and year-category random effects.
+To ensure interpretable posterior inferences of random effect contribution, I applied sum-to-zero constraints such that none of the category interaction random effects altered overall category probabilities.
+For the space-year-category random effects, I applied analogous sum-to-zero constraints to maintain roles of the space-category and year-category random effects.
 Together, these were:
 
 1. Category $\sum_k \beta_k = 0$
@@ -168,17 +173,17 @@ Together, these were:
 
 #### Survey weighted likelihood
 
-We included surveys which use a complex design, in which each individual has an unequal probability of being included in the sample.
+I included surveys which use a complex design, in which each individual has an unequal probability of being included in the sample.
 For example the DHS often employs a two-stage cluster design, first taking an urban rural stratified sample of ennumeration areas, before selecting households from each ennumeration area using systematic sampling [@measure2012sampling].
 
-To account for this aspect of survey design, we use a weighted pseudo-likelihood where the observed counts $y$ are replaced by effective counts $y^\star$ calculated using the survey weights $w_j$ of all individuals $j$ in the corresponding strata.
+To account for this aspect of survey design, I use a weighted pseudo-likelihood where the observed counts $y$ are replaced by effective counts $y^\star$ calculated using the survey weights $w_j$ of all individuals $j$ in the corresponding strata.
 We multiplied direct estimates produced using the `survey` package [@JSSv009i08] by the Kish effective sample size [@kish1965survey]
 \begin{equation}
     m^\star = \frac{\left(\sum_j w_j \right)^2}{\sum_j {w_j}^2}
 \end{equation}
 to obtain $y^\star$.
-These counts may not be integers, and as such the Poisson likelihood we used in Equation \ref{eq:poisson} is not appropriate.
-Instead, we used a generalised Poisson pseudo-likelihood $y^\star \sim \text{xPoisson}(\kappa)$, given by
+These counts may not be integers, and as such the Poisson likelihood I used in Equation \ref{eq:poisson} is not appropriate.
+Instead, I used a generalised Poisson pseudo-likelihood $y^\star \sim \text{xPoisson}(\kappa)$, given by
 \begin{equation}
     p(y^\star) = \frac{\kappa^{y^\star}}{\left \lfloor{y^\star!}\right \rfloor } \exp \left(- \kappa \right),
 \end{equation}
@@ -187,6 +192,13 @@ as implemented by `family = "xPoisson"` in `R-INLA`, which accepts non-integer i
 #### Model selection
 
 ### Spatial logistic regression
+
+<!-- We considered six logistic regression models (Table \ref{tab:logistic-models}) each including a constant $\beta_0 \sim \mathcal{N}(-2, 1^2)$, country random effects $\zeta_{c} \sim \mathcal{N}(0, \tau_\zeta^{-1})$, and age-country random effects $\alpha_{ac} \sim \mathcal{N}(0, \tau_\alpha^{-1})$. -->
+<!-- The prior on $\beta_0$ placed 95\% prior probability on the range `r 100 * round(plogis(-4), 2)`-`r 100 * round(plogis(0), 2)`\% for the percentage of those with non-regular or multiple partners who report transactional sex. -->
+<!-- We considered two specifications (IID, Besag) for the spatial random effects $\phi_i$. -->
+<!-- To aid estimation with sparse data, we also considered national-level covariates for the proportion of men who have paid for sex ever \texttt{cfswever} or in the last twelve months \texttt{cfswrecent}, available from @hodgins2022population. -->
+<!-- For both random effect precision parameters $\tau \in \{\tau_\alpha, \tau_\zeta\}$ we used the PC prior with base model $\sigma = 0$ and $\mathbb{P}(\sigma > 2.5 = 0.01)$. -->
+<!-- For the regression parameters $\beta \in \{\beta_\texttt{cfswever}, \beta_\texttt{cfswrecent}\}$ we used the prior $\beta \sim \mathcal{N}(0, 2.5^2)$. -->
 
 #### Model specifications
 
@@ -242,20 +254,20 @@ Risk group specific HIV incidence estimates are then given by
     \lambda_{ia3} &= \text{RR}_{3} \lambda_{ia2}, \\
     \lambda_{ia4} &= \text{RR}_4(\lambda_{ia}) \lambda_{ia2}.
 \end{align}
-which we evaluated using Naomi model estimates of the number of new HIV infections $I_{ia} = \lambda_{ia} N_{ia}$, HIV infection risk ratios $\{\text{RR}_3, \text{RR}_4(\lambda_{ia})\}$, and risk group population sizes as above.
+which I evaluated using Naomi model estimates of the number of new HIV infections $I_{ia} = \lambda_{ia} N_{ia}$, HIV infection risk ratios $\{\text{RR}_3, \text{RR}_4(\lambda_{ia})\}$, and risk group population sizes as above.
 The risk ratio $\text{RR}_4(\lambda_{ia})$ was defined as a function of general population incidence.
 The number of new HIV infections are then $I_{iak} = \lambda_{iak} N_{iak}$.
 
 ### Expected new infections reached
 
 I calculated the number of new infections that would be reached prioritising according to each possible stratification of the population--that is for all $2^3 = 8$ possible combinations of stratification by location, age, and risk group. 
-As an illustration, for stratification just by age, we aggregated the number of new HIV infections and HIV incidence as such 
+As an illustration, for stratification just by age, I aggregated the number of new HIV infections and HIV incidence as such 
 \begin{align}
     I_a &= \sum_{ik} I_{iak}, \\
     \lambda_a &= I_a / \sum_{ik} N_{iak}.
 \end{align}
 Under this stratification, individuals in each age group $a$ are prioritised according to the highest HIV incidence $\lambda_a$.
-By cumulatively summing the expected infections, for each fraction of the total population reached we calculated the fraction of total expected new infections that would be reached.
+By cumulatively summing the expected infections, for each fraction of the total population reached I calculated the fraction of total expected new infections that would be reached.
 
 This analysis was relatively simple.
 More involved analyses might consider prioritisation of a hypothetical intervention which has some, possibly varying, probability of preventing HIV acquisition, as well as the costs associated to its roll-out.
