Improve the introduction

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -44,13 +44,12 @@ Usually, people answering survey questions or using healthcare facilities.
 Because the data have positions in space and time, statisticians describe it as spatio-temporal [@cressie2015statistics].
 While there is a great diversity of spatio-temporal data, there are important and distinctive commonalities which make their shared study worthwhile.
 
-Computation is an essential part of modern statistical practice.
-Each project chapter is accompanied by computer code, hosted on GitHub.
+Computation is an essential part of modern statistical practice, and each project chapter is accompanied by code, hosted on GitHub.
 
 ## Chapter overview
 
-* Chapter \@ref(background): I start by reviewing the required background for the rest of the thesis. This background concerns the HIV/AIDS epidemic and Bayesian spatio-temporal statistics.
-* Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed for analysis of a grid of pixels. The districts of a country are not a grid. I evaluate the practical consequences of this this concern [@howes2023beyond].
-* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection. The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections. I estimate the size of behavioural risk groups across priority countries to enable implementation of the strategy, and assess the potential benefits [@howes2023spatio].
-* Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used across countries to estimate HIV indicators. I develop an approximate Bayesian inference method, designed with Naomi in mind, which combines adaptive Gauss-Hermite quadrature with principal components analysis, and apply it to data in Malawi [@howes2023fast].
+* Chapter \@ref(background): I start by reviewing the required background for the rest of the thesis, namely relating to the HIV/AIDS epidemic and Bayesian spatio-temporal statistics.
+* Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed with analysis of a grid of pixels in mind. In disease mapping, we work using the districts of a country, which are not a grid. I evaluate the practical consequences of this this concern [@howes2023beyond].
+* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection. The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections using available resources. I estimate the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assess the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
+* Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators. With this motivation, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast]. I apply the method to data from Malawi, and analyse the consequence of inference method choice for policy relevant outcomes. Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): I discuss avenues for future work, and my conclusions regarding the research.
