Work on Chapter 4

--- a/02-background.Rmd
+++ b/02-background.Rmd
@@ -50,7 +50,7 @@ Roll out of antiretroviral therapy (ART) has been a key tool.
 Other interventions include condoms, pre-exposure prophylaxis (PrEP) and PEP, education, economic empowerment, VMMC.
 
 ```{r overall-picture, fig.cap="Overall picture."}
-knitr::include_graphics("figures/introduction/overall-picture.png")
+knitr::include_graphics("figures/overall-picture.png")
 ```
 
 <!-- Uneven burden in space -->
