--- a/front-and-back-matter/notations.tex
+++ b/front-and-back-matter/notations.tex
@@ -1,6 +1,7 @@
 \begin{mclistof}{List of Notations}{3.2cm}
 
 \item[$\rho$] HIV prevalence.
+\item[$\lambda$] HIV incidence.
 \item[$\alpha$] ART coverage.
 \item[$\mathcal{S}$] Spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$.
 \item[$s \in \mathcal{S}$] Point location.
