--- a/references.bib
+++ b/references.bib
@@ -620,3 +620,68 @@ URL= {https://www.r-inla.org/faq},
   year={2017},
   publisher={Wiley Online Library}
 }
+
+@misc{unaids2021update,
+  title={{2021 UNAIDS Global AIDS Update - Confronting Inequalities - Lessons for pandemic responses from 40 Years of AIDS}},
+  author={{UNAIDS}},
+  year={2021},
+  publisher={Geneva, Switzerland}
+}
+
+@article{saul2018dreams,
+  title={{The DREAMS core package of interventions: a comprehensive approach to preventing HIV among adolescent girls and young women}},
+  author={Saul, Janet and Bachman, Gretchen and Allen, Shannon and Toiv, Nora F and Cooney, Caroline and Beamon, Ta’Adhmeeka},
+  journal={PLoS One},
+  volume={13},
+  number={12},
+  pages={e0208167},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@Manual{global2018measurement,
+ title = {{The Global Fund Measurement Framework for Adolescent Girls and Young Women Programs}},
+ author = {{The Global Fund}},
+ year = {2018},
+ note = {Accessed 30/08/2021},
+ url = {https://www.theglobalfund.org/media/8076/me_adolescentsgirlsandyoungwomenprograms_frameworkmeasurement_en.pdf},
+}
+
+@misc{measure2012sampling,
+  title={{Sampling and Household Listing Manual: Demographic and Health Surveys Methodology}},
+  author={{DHS}},
+  year={2012}
+}
+
+@book{kish1965survey,
+  title={Survey sampling},
+  author={Kish, Leslie},
+  number={04; HN29, K5.},
+  year={1965}
+}
+
+@article{JSSv009i08,
+   author = {Thomas Lumley},
+   title = {Analysis of Complex Survey Samples},
+   journal = {Journal of Statistical Software, Articles},
+   volume = {9},
+   number = {8},
+   year = {2004},
+   keywords = {},
+   abstract = {I present software for analysing complex survey samples in R. The sampling scheme can be explicitly described or represented by replication weights. Variance estimation uses either replication or linearisation.},
+   issn = {1548-7660},
+   pages = {1--19},
+   doi = {10.18637/jss.v009.i08},
+   url = {https://www.jstatsoft.org/v009/i08}
+}
+
+@article{hodgins2022population,
+  title={Population sizes, HIV prevalence, and HIV prevention among men who paid for sex in sub-Saharan Africa (2000--2020): A meta-analysis of 87 population-based surveys},
+  author={Hodgins, Caroline and Stannah, James and Kuchukhidze, Salome and Zembe, Lycias and Eaton, Jeffrey W and Boily, Marie-Claude and Maheu-Giroux, Mathieu},
+  journal={PLoS Medicine},
+  volume={19},
+  number={1},
+  pages={e1003861},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
