--- a/04-multi-agyw.Rmd
+++ b/04-multi-agyw.Rmd
@@ -1,16 +1,27 @@
 ---
-#########################################
-# options for knitting a single chapter #
-#########################################
 output:
+  bookdown::html_document2: default
   bookdown::pdf_document2:
     template: templates/brief_template.tex
     citation_package: biblatex
-  bookdown::html_document2: default
   bookdown::word_document2: default
 documentclass: book
 bibliography: references.bib
 ---
+
+```{r echo = FALSE}
+options(scipen = 100)
+
+knitr::opts_chunk$set(
+  echo = FALSE,
+  warning = FALSE,
+  message = FALSE,
+  dpi = 320,
+  cache = TRUE,
+  out.width = "95%",
+  fig.align = 'center'
+)
+```
 
 # A model for risk group proportions {#multi-agyw}
 \adjustmtc
@@ -18,25 +29,51 @@ bibliography: references.bib
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 In this chapter I describe an application of Bayesian spatio-temporal statistics to small-area estimation of HIV risk group proportions.
-This work was done in collaboration with colleagues from the MRC Centre for Global Infectious Disease Analysis and UNAIDS.
-My primary role was to develop the statistical model, building upon an earlier version of the analysis conducted by Kathryn Risher.
+This work was conducted in collaboration with colleagues from the MRC Centre for Global Infectious Disease Analysis and UNAIDS.
+My primary role was to develop the statistical model.
+I built on an earlier version of the analysis conducted by Kathryn Risher.
 The results are described in @howes2023spatio.
-Further, Kathryn has created a spreadsheet tool based on the estimates which is beginning to be used by countries to guide policy.
+Kathryn has further created a spreadsheet tool using the resulting estimates which is now being used by countries to guide policy.
 Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw) and supported by the R package [`multi.utils`](https://athowes.github.io/multi.utils) [@multiutils].
 
 ## Background
 
-Risk of acquiring HIV infection is not equal for all individuals.
-Moreover, variation in risk is systematic across demographic characteristics.
-Adolescent girls and young women (AGYW) -- that is, females aged 15-29 -- are one such demographic group at particular risk.
+Risk of acquiring HIV infection varies by individual.
+Moreover, variation is systematic across demographic characteristics.
+Adolescent girls and young women (AGYW, here defined as females aged 15-29) are one demographic group at increased risk.
+AGYW comprise 44% of new infections, while only 28% of the population [@unaids2021update], and HIV incidence for AGYW is 2.4 times higher than for similarly aged males.
+The reasons for this disparity are given in Table \@ref(tab:agyw-reasons).
 
-The Global AIDS Strategy 2021-2026 proposed stratifying HIV prevention packages to AGYW based on local population-level HIV incidence and individual-level sexual risk behaviour.
-The idea is that risk depends on both factors, and therefore prioritisation is more efficient if both are taken into account (Figure \@ref(fig:risk-grid)).
-Implementing the strategy is easier when estimates of the size of each population are available.
+| Reason      | Description |
+| ----------- | ----------- |
+| Structural vulnerability and power imbalances | Text |
+| Age patterns of sexual mixing   | Text |
+| Younger age at first sex   | Text |
+| Increased susceptibility to HIV infection | Text |
 
-```{r risk-grid, fig.cap="Risk grid."}
-knitr::include_graphics("figures/extra/risk-grid.png")
+Table: (\#tab:agyw-reasons) Reasons.
+
+On this basis, AGYW have been identified as a priority population for HIV prevention services [@saul2018dreams; @global2018measurement].
+The Global AIDS Strategy 2021-2026 [@unaids2021global] proposed stratifying HIV prevention packages to AGYW based on 1) local population-level HIV incidence and 2) individual-level sexual risk behaviour.
+As risk depends on both factors, prioritisation of prevention services would be more efficient if both are taken into account (Figure \@ref(fig:risk-grid)).
+The strategy encourages programmes to define targets for the proportion of AGYW to be reached with a range of interventions.
+Estimates of the size of each risk group are required.
+
+```{r risk-grid, fig.cap="Risk depends on both individual-level risk behaviour and population-level HIV incidence."}
+knitr::include_graphics("figures/risk-grid.png")
 ```
+
+| Risk group | Description | Local HIV incidence | Incidence ratio |
+| ---------- | ----------- | ------------------- | --------------- |
+| None       | Not sexually active | -- | 0.0 |
+| Low        | One cohabiting partner | -- | 1.0 (Baseline) |
+| High       | Non-regular or multiple partner(s) | -- | 1.72 |
+| Very High  | Transactional sex (adjusted to correspond to female sex workers) | 0.1-0.3% | 13.0 |
+| | | 0.3-1.0% | 9.0 |
+| | | 1.0-3.0% | 6.0 |
+| | | >3.0% | 3.0 |
+
+Table: (\#tab:risk-groups) Behavioural risk groups.
 
 ## Data
 
@@ -48,14 +85,14 @@ I found that it was not appropriate to use the surveys without a specific transa
 
 I took a two-stage modelling approach to estimate the four risk group proportions.
 Index the four risk groups as $k \in \{1, 2, 3, 4\}$, and denote being in either the third or fourth risk group by $k = 3^{+}$.
-First, using all the surveys, I used a spatio-temporal multinomial logistic regression model to model the proportion of AGYW in the risk groups $k \in \{1, 2, 3^{+}\}$.
-Then, using only those surveys with a specific transactional sex question, I fit a spatial logistic regression model to estimate the proportion of those in the $k = 3^{+}$ risk group that were in the $k = 3$ and $k = 4$ risk groups respectively.
+First, using all the surveys, I used a spatio-temporal multinomial logistic regression model (Section \@ref(st-multinomial)) to estimate the proportion of AGYW in the risk groups $k \in \{1, 2, 3^{+}\}$.
+Then, using only those surveys with a specific transactional sex question, I fit a spatial logistic regression model (Section \@ref(s-logistic)) to estimate the proportion of those in the $k = 3^{+}$ risk group that were in the $k = 3$ and $k = 4$ risk groups respectively.
 
-### Spatio-temporal multinomial logistic regression
+### Spatio-temporal multinomial logistic regression {#st-multinomial}
 
 Let $i \in \{1, \ldots, n\}$ denote districts partitioning the 13 studied AGYW priority countries $c[i] \in \{1, \ldots, 13\}$.
 Consider the years 1999-2018 denoted as $t \in \{1, \ldots, T\}$, and age groups $a \in \{\text{15--19}, \text{20--24}, \text{25--29}\}$.
-Let $p_{itak} > 0$ with $\sum_{k = 1}^{3^{+}} p_{itak} = 1$, be the probability of membership of risk group $k$ for an individual in district $i$, at time $t$, in age group $a$.
+Let $p_{itak} > 0$ with $\sum_{k = 1}^{3^{+}} p_{itak} = 1$, be the probabilities of membership of risk group $k$.
 
 #### Multinomial logistic regression
 
@@ -64,8 +101,8 @@ A baseline category multinomial logistic regression model is specified by
     \y_{ita} &= (y_{ita1}, \ldots, y_{ita3^{+}})^\top \sim \text{Multinomial}(m_{ita}; \, p_{ita1}, \ldots, p_{ita3^{+}}), \\
     \log \left( \frac{p_{itak}}{p_{ita1}} \right) &= \eta_{itak}, \quad k = 2, 3^{+},
 \end{align}
-where the number in risk group $k$ is $y_{itak}$, the sample size is $m_{ita} = \sum_{k = 1}^{3^{+}} y_{itak}$, and $k = 1$ is the baseline category.
-This model is not an LGM, and it is not possible to fit in `R-INLA`.
+where the number in risk group $k$ is $y_{itak}$, the fixed sample size is $m_{ita} = \sum_{k = 1}^{3^{+}} y_{itak}$, and $k = 1$ is chosen as the baseline category.
+This model is not an LGM, and is not possible to fit in `R-INLA`.
 
 #### The multinomial-Poisson transformation
 
@@ -84,10 +121,7 @@ Category probabilities are then obtained by the softmax function
 \begin{equation}
     p_{itak} = \frac{\exp(\eta_{itak})}{\sum_{k = 1}^{3^{+}} \exp(\eta_{itak})} = \frac{\kappa_{itak}}{\sum_{k = 1}^{3^{+}} \kappa_{itak}} = \frac{\kappa_{itak}}{\kappa_{ita}}.
 \end{equation}
-In the equivalent model, the sample sizes $m_{ita} = \sum_k y_{itak}$ are treated as random rather than fixed, and take a Poisson distribution
-\begin{equation}
-    m_{ita} \sim \text{Poisson} \left( \kappa_{ita} \right).
-\end{equation}
+Under the equivalent model, the sample sizes $m_{ita} = \sum_k y_{itak}$ are treated as random $m_{ita} \sim \text{Poisson} \left( \kappa_{ita} \right)$ rather than fixed.
 The joint distribution of $p(\mathbf{y}_{ita}, m_{ita}) = p(\mathbf{y}_{ita} \, | \, m_{ita})p(m_{ita})$ is then
 \begin{align}
 p(\mathbf{y}_{ita}, m_{ita}) &= \exp(-\kappa_{ita}) \frac{(\kappa_{ita})^{m_{ita}}}{m_{ita}!} \times \frac{m_{ita}!}{\prod_k y_{itak}!} \prod_k \left( \frac{\kappa_{itak}}{\kappa_{ita}} \right)^{y_{itak}} \\
@@ -95,10 +129,11 @@ p(\mathbf{y}_{ita}, m_{ita}) &= \exp(-\kappa_{ita}) \frac{(\kappa_{ita})^{m_{ita
 &= \prod_k \text{Poisson} \left( y_{itak} \, | \, \kappa_{itak} \right). \label{eq:prodpoisson}
 \end{align}
 corresponding to the product of independent Poisson likelihoods as in Equation \ref{eq:poisson1}.
+
 This model, including random sample sizes, is equivalent to the multinomial logistic regression only when the normalisation constants $m_{ita}$ are recovered exactly.
 To ensure that this is the case, one approach is to include observation-specific random effects $\theta_{ita}$ in the equation for the linear predictor.
 Multiplying each of $\{\kappa_{itak}\}_{k = 1}^{3^+}$ by $\exp(\theta_{ita})$ has no effect on the category probabilities, but does provide the necessary flexibility for $\kappa_{ita}$ to recover $m_{ita}$ exactly.
-Although in theory an improper prior $\theta_{ita} \propto 1$ should be used, in practise, by keeping $\eta_{ita}$ otherwise small using appropriate constraints, so that arbitrarily large values of $\theta_{ita}$ are not required, it is sufficient (and practically preferable for inference) to instead use a vague prior.
+Although in theory an improper prior $\theta_{ita} \propto 1$ should be used, I found that in practise, by keeping $\eta_{ita}$ otherwise small using appropriate constraints, so that arbitrarily large values of $\theta_{ita}$ are not required, it is sufficient (and practically preferable for inference) to instead use a vague prior.
 
 #### Model specifications
 
@@ -120,7 +155,6 @@ For the space-category $\phi_{ik}$ random effects I considered two specification
 $$
 \bphi = (\phi_{11}, \ldots, \phi_{n1}, \ldots, \phi_{1{3^{+}}}, \ldots \phi_{n3^{+}})^\top \sim \mathcal{N}(\mathbf{0}, (\tau_\phi \mathbf{R}^\star_\phi)^{-}).
 $$
-
 The scaled structure matrix $\mathbf{R}^\star_\phi = \mathbf{R}^\star_b \otimes \mathbf{I}$ is given by the Kronecker product of the scaled Besag structure matrix $\mathbf{R}^\star_b$ and the identity matrix $\mathbf{I}$, and ${-}$ denotes the generalised matrix inverse.
 Scaling of the structure matrix to have generalised variance one ensures interpretable priors may be placed on the precision parameter [@sorbye2014scaling].
 I followed the further recommendations of @freni2018note with regard to disconnected adjacency graphs, singletons and constraints.
@@ -132,7 +166,7 @@ where $j \sim i$ if the districts $A_i$ and $A_j$ are adjacent, and $n_{\delta i
 
 In preliminary testing, I excluded spatial random effects from the model, but found that this negatively effected performance.
 I also tested using the BYM2 model [@simpson2017penalising] in place of the Besag, but found that the proportion parameter posteriors tended to be highly peaked at the value one.
-For simplicity and to avoid numerical issues, by using Besag random effects I decided to fix this proportion to one.
+For simplicity and to avoid numerical issues, by using Besag random effects I effectively decided to fix this proportion to one.
 
 ##### Temporal random effects
 
@@ -143,7 +177,6 @@ For the year-category $\gamma_{tk}$ random effects I considered two specificatio
 $$
 \bm{\gamma} = (\gamma_{11}, \ldots, \gamma_{13^{+}}, \ldots, \gamma_{T1}, \ldots, \gamma_{T3^{+}})^\top \sim \mathcal{N}(\mathbf{0}, (\tau_\phi \mathbf{R}^\star_\gamma)^{-}).
 $$
-
 The scaled structure matrix $\mathbf{R}^\star_\gamma = \mathbf{R}^\star_r \otimes \mathbf{I}$ is given by the Kronecker product of a scaled AR1 structure matrix $\mathbf{R}^\star_r$ and the identity matrix $\mathbf{I}$.
 The AR1 structure matrix $\mathbf{R}_r$ is obtained by precision matrix of the random effects $\mathbf{r} = (r_1, \ldots, r_T)^\top$ specified by
 \begin{align}
@@ -155,21 +188,20 @@ where $\epsilon_t \sim \mathcal{N}(0, 1)$ and $|\rho| < 1$.
 ##### Priors
 
 All random effect precision parameters $\tau \in \{\tau_\beta, \tau_\zeta, \tau_\alpha, \tau_\phi, \tau_\gamma\}$ were given independent penalised complexity (PC) priors [@simpson2017penalising] with base model $\sigma = 0$ given by $p(\tau) = 0.5 \nu \tau^{-3/2} \exp \left( - \nu \tau^{-1/2} \right)$ where $\nu = - \ln(0.01) / 2.5$ such that  $\mathbb{P}(\sigma > 2.5) = 0.01$.
-
 For the lag-one correlation parameter $\rho$, I used the PC prior, as derived by @sorbye2017penalised, with base model $\rho = 1$ and condition $\mathbb{P}(\rho > 0 = 0.75)$.
 I chose the base model $\rho = 1$ corresponding to no change in behaviour over time, rather than the alternative $\rho = 0$ corresponding to no correlation in behaviour over time, as I judged the former to be more plausible a priori.
 
 #### Constraints
 
-To ensure interpretable posterior inferences of random effect contribution, I applied sum-to-zero constraints such that none of the category interaction random effects altered overall category probabilities.
+To ensure interpretable posterior inferences relating to the random effects, I applied sum-to-zero constraints such that none of the category interaction random effects altered overall category probabilities.
 For the space-year-category random effects, I applied analogous sum-to-zero constraints to maintain roles of the space-category and year-category random effects.
 Together, these were:
 
-1. Category $\sum_k \beta_k = 0$
-2. Country $\sum_c \zeta_{ck} = 0, \, \forall \, k$
+1. Category $\sum_k \beta_k = 0$,
+2. Country $\sum_c \zeta_{ck} = 0, \, \forall \, k$,
 3. Age-country $\sum_a \alpha_{ack} = 0, \, \forall \, c, k$,
-4. Spatial $\sum_i \phi_{ik} = 0, \, \forall \, k$
-5. Temporal $\sum_t \gamma_{tk} = 0, \, \forall \, k$
+4. Spatial $\sum_i \phi_{ik} = 0, \, \forall \, k$,
+5. Temporal $\sum_t \gamma_{tk} = 0, \, \forall \, k$.
 
 #### Survey weighted likelihood
 
@@ -177,12 +209,12 @@ I included surveys which use a complex design, in which each individual has an u
 For example the DHS often employs a two-stage cluster design, first taking an urban rural stratified sample of ennumeration areas, before selecting households from each ennumeration area using systematic sampling [@measure2012sampling].
 
 To account for this aspect of survey design, I use a weighted pseudo-likelihood where the observed counts $y$ are replaced by effective counts $y^\star$ calculated using the survey weights $w_j$ of all individuals $j$ in the corresponding strata.
-We multiplied direct estimates produced using the `survey` package [@JSSv009i08] by the Kish effective sample size [@kish1965survey]
+I multiplied direct estimates produced using the `survey` package [@JSSv009i08] by the Kish effective sample size [@kish1965survey]
 \begin{equation}
     m^\star = \frac{\left(\sum_j w_j \right)^2}{\sum_j {w_j}^2}
 \end{equation}
 to obtain $y^\star$.
-These counts may not be integers, and as such the Poisson likelihood I used in Equation \ref{eq:poisson} is not appropriate.
+These counts may not be integers, and as such the Poisson likelihood I used in Equation \ref{eq:poisson1} is not appropriate.
 Instead, I used a generalised Poisson pseudo-likelihood $y^\star \sim \text{xPoisson}(\kappa)$, given by
 \begin{equation}
     p(y^\star) = \frac{\kappa^{y^\star}}{\left \lfloor{y^\star!}\right \rfloor } \exp \left(- \kappa \right),
@@ -191,14 +223,23 @@ as implemented by `family = "xPoisson"` in `R-INLA`, which accepts non-integer i
 
 #### Model selection
 
-### Spatial logistic regression
+### Spatial logistic regression {#s-logistic}
 
-<!-- We considered six logistic regression models (Table \ref{tab:logistic-models}) each including a constant $\beta_0 \sim \mathcal{N}(-2, 1^2)$, country random effects $\zeta_{c} \sim \mathcal{N}(0, \tau_\zeta^{-1})$, and age-country random effects $\alpha_{ac} \sim \mathcal{N}(0, \tau_\alpha^{-1})$. -->
-<!-- The prior on $\beta_0$ placed 95\% prior probability on the range `r 100 * round(plogis(-4), 2)`-`r 100 * round(plogis(0), 2)`\% for the percentage of those with non-regular or multiple partners who report transactional sex. -->
-<!-- We considered two specifications (IID, Besag) for the spatial random effects $\phi_i$. -->
-<!-- To aid estimation with sparse data, we also considered national-level covariates for the proportion of men who have paid for sex ever \texttt{cfswever} or in the last twelve months \texttt{cfswrecent}, available from @hodgins2022population. -->
-<!-- For both random effect precision parameters $\tau \in \{\tau_\alpha, \tau_\zeta\}$ we used the PC prior with base model $\sigma = 0$ and $\mathbb{P}(\sigma > 2.5 = 0.01)$. -->
-<!-- For the regression parameters $\beta \in \{\beta_\texttt{cfswever}, \beta_\texttt{cfswrecent}\}$ we used the prior $\beta \sim \mathcal{N}(0, 2.5^2)$. -->
+To estimate the proportion of those in the $k = 3^{+}$ risk group that were in the $k = 3$ and $k = 4$ risk groups respectively, I fit logistic regression models of the form
+\begin{align}
+    y_{ia4} &\sim \text{Binomial} \left( y_{ia3} + y_{ia4}, q_{ia} \right), \label{eq:logistic-regression} \\
+    q_{ia} &= \text{logit}^{-1} \left( \eta_{ia} \right), 
+\end{align}
+where $q_{ia} = p_{ia4} / (p_{ia3} + p_{ia4}) = p_{ia4} / p_{ia{3^+}}$.
+Taking this two-step approach allowed me to include all surveys in the multinomial regression model, but only those surveys with a specific transactional sex question in Equation \ref{eq:logistic-regression}.
+As all such surveys occurred in 2013-2018, in the logistic regression model I assumed $q_{ia}$ to be constant over time.
+
+I considered six logistic regression models each including a constant $\beta_0 \sim \mathcal{N}(-2, 1^2)$, country random effects $\zeta_{c} \sim \mathcal{N}(0, \tau_\zeta^{-1})$, and age-country random effects $\alpha_{ac} \sim \mathcal{N}(0, \tau_\alpha^{-1})$.
+The prior on $\beta_0$ placed 95\% prior probability on the range `r 100 * round(plogis(-4), 2)`-`r 100 * round(plogis(0), 2)`\% for the percentage of those with non-regular or multiple partners who report transactional sex.
+I considered two specifications (IID, Besag) for the spatial random effects $\phi_i$.
+To aid estimation with sparse data, I also considered national-level covariates for the proportion of men who have paid for sex ever \texttt{cfswever} or in the last twelve months \texttt{cfswrecent}, available from @hodgins2022population.
+For both random effect precision parameters $\tau \in \{\tau_\alpha, \tau_\zeta\}$ we used the PC prior with base model $\sigma = 0$ and $\mathbb{P}(\sigma > 2.5 = 0.01)$.
+For the regression parameters $\beta \in \{\beta_\texttt{cfswever}, \beta_\texttt{cfswrecent}\}$ we used the prior $\beta \sim \mathcal{N}(0, 2.5^2)$.
 
 #### Model specifications
 
@@ -214,7 +255,7 @@ Responding "yes" to the survey question "have you had sex in return for gifts, c
 In recognition of this, I adjusted the estimates obtained based on the survey to match FSW population size estimates obtained via alternative methods.
 
 @stevens2022estimating used a Bayesian meta-analysis of key population specific data sources to estimate adult (15-49) FSW population size by country.
-I disaggregated these estimates by age according to the following method.
+I disaggregated these estimates by age as follows.
 First, I calculated the total sexually debuted population in each age group, in each country.
 To describe the distribution of age at first sex, I used skew logistic distributions [@nguyen2022trends] with cumulative distribution function given by
 \begin{equation}
@@ -226,7 +267,7 @@ I assumed these ratios in South Africa were applicable to every country, allowin
 The results obtained are shown in Figure \@ref(fig:age-disagg-fsw-line).
 
 ```{r age-disagg-fsw-line, out.width = "90%", echo=FALSE, fig.cap="Proportion of FSW by age group (including the age groups 30-34, 35-39, 40-44 and 45-49) as produced by the disaggregation procedure."}
-knitr::include_graphics("figures/multi-agyw/age-disagg-fsw-line.png")
+knitr::include_graphics("resources/multi-agyw/20230627-144735-3da88508/depends/age-disagg-fsw-line.png")
 ```
 
 ### Results
@@ -269,8 +310,7 @@ As an illustration, for stratification just by age, I aggregated the number of n
 Under this stratification, individuals in each age group $a$ are prioritised according to the highest HIV incidence $\lambda_a$.
 By cumulatively summing the expected infections, for each fraction of the total population reached I calculated the fraction of total expected new infections that would be reached.
 
-This analysis was relatively simple.
-More involved analyses might consider prioritisation of a hypothetical intervention which has some, possibly varying, probability of preventing HIV acquisition, as well as the costs associated to its roll-out.
+### Results
 
 ## Discussion
 
