--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@
 ## thesis metadata ##
 #####################
 title: |
-  Methods and applications of Bayesian spatio-temporal statistics for HIV surveillance
+  Methods and applications of Bayesian spatio-temporal statistics for small-area estimation of HIV indicators
 author: Adam Howes
 college: Department of Mathematics
 university: |
@@ -20,7 +20,7 @@ abstract: |
   `r paste(readLines("front-and-back-matter/_abstract.Rmd"), collapse = '\n  ')`
 acknowledgements: |
   `r paste(readLines("front-and-back-matter/_acknowledgements.Rmd"), collapse = '\n  ')`
-dedication: \textit{For $\sum_i u_i$ subject to side constraints}
+dedication: \textit{For someone, or something}
 abbreviations: "front-and-back-matter/abbreviations" # path to .tex file with abbreviations
 notations: "front-and-back-matter/notations"
 
