--- a/templates/brief_template.tex
+++ b/templates/brief_template.tex
@@ -160,6 +160,24 @@ $endfor$
 %%%%% YOUR OWN PERSONAL MACROS
 % This is a good place to dump your own LaTeX macros as they come up.
 
+\newcommand{\Sc}{\mathcal{S}}
+\newcommand{\R}{\mathcal{R}}
+\newcommand{\N}{\mathcal{N}}
+\newcommand{\X}{\mathcal{X}} 
+\newcommand{\m}{\mathbf{m}}
+\newcommand{\bu}{\mathbf{u}}
+\newcommand{\bv}{\mathbf{v}}
+\newcommand{\w}{\mathbf{w}}
+\newcommand{\x}{\mathbf{x}}
+\newcommand{\y}{\mathbf{y}}
+\newcommand{\z}{\mathbf{z}}
+\newcommand{\bb}{\mathbf{b}}
+\newcommand{\bphi}{\bm{\phi}}
+\newcommand{\brho}{\bm{\rho}}
+\newcommand{\btheta}{\bm{\theta}}
+
+\RequirePackage{bm}
+
 % To make text superscripts shortcuts
 	\renewcommand{\th}{\textsuperscript{th}} % ex: I won 4\th place
 	\newcommand{\nd}{\textsuperscript{nd}}
